// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly for player 1 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#f3f4f6",
        "borderRadius": 80,
        "height": 160,
        "justifyContent": "center",
        "margin": 8,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "width": 160,
      },
      {
        "alignSelf": "flex-start",
        "backgroundColor": "#4c9d00",
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
      null,
      null,
    ]
  }
  testID="add-button-1"
>
  <Text
    style={
      [
        {
          "fontSize": 72,
          "marginTop": -14,
          "textAlign": "center",
        },
        {
          "color": "#faf8f8",
        },
      ]
    }
  >
    +
  </Text>
</View>
`;

exports[`renders correctly for player 2 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#f3f4f6",
        "borderRadius": 80,
        "height": 160,
        "justifyContent": "center",
        "margin": 8,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "width": 160,
      },
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#0073e6",
      },
      null,
      null,
    ]
  }
  testID="add-button-2"
>
  <Text
    style={
      [
        {
          "fontSize": 72,
          "marginTop": -14,
          "textAlign": "center",
        },
        {
          "color": "#faf8f8",
        },
      ]
    }
  >
    +
  </Text>
</View>
`;
